--- a/zerozero-0-0/client/index.html
+++ b/zerozero-0-0/client/index.html
@@ -10,7 +10,7 @@
     <p>TodoList</p>
     
     <div class="add-todo">
-        <input type="text" id="add-todo-input" placeholder="新しいTodo を入力">
+        <input type="text" id="add-todo-input" name="todo-title" autocomplete="on" placeholder="新しいTodo を入力">
         <button id="add-todo-button">追加</button>
     </div>
     <ul id="todo-list">
