レビューの修正 level-3 hinemosu1415

--- a/hinemosu1415/client/index.html
+++ b/hinemosu1415/client/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>TODO一覧</title>
-  <script src="script.js"></script>
 </head>
 <body>
   <h1>TODOリスト</h1>
   <ul id="todo-list"></ul>
+  <script src="script.js"/>
 </body>
 </html>
