--- a/hinemosu1415/client/index.html
+++ b/hinemosu1415/client/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>TODOリスト</h1>
   <ul id="todo-list"></ul>
-  <script src="script.js"/>
+  <script src="script.js"></script>
 </body>
 </html>
