--- a/hinemosu1415/client/index.html
+++ b/hinemosu1415/client/index.html
@@ -7,6 +7,12 @@
 <body>
   <h1>TODOリスト</h1>
   <ul id="todo-list"></ul>
+
+  <form id="todo-form">
+    <input type="text" id="todo-input" placeholder="新しいTODOを入力">
+    <button type="submit">追加</button>
+  </form>
+
   <script src="script.js"></script>
 </body>
 </html>
