--- a/nomanoma121/client/index.html
+++ b/nomanoma121/client/index.html
@@ -7,6 +7,10 @@
 <body>
   <div class="container">
     <h1>Todo App</h1>
+    <div class="add-todo">
+      <input type="text" id="todo-input" placeholder="Add a new todo" />
+      <button id="add-button">Add Todo</button>
+    </div>
     <ul id="todo-list"></ul>
   </div>
   <script src="script.js"></script>
