feat: エラーを表示

--- a/nomanoma121/client/index.html
+++ b/nomanoma121/client/index.html
@@ -12,6 +12,7 @@
       <button id="add-button">Add Todo</button>
     </div>
     <ul id="todo-list"></ul>
+    <p id="error-message"></p>
   </div>
   <script src="script.js"></script>
 </body>
