--- a/nomanoma121/client/index.html
+++ b/nomanoma121/client/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Todo App</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container">
-    <h1>Todo App</h1>
-    <ul id="todo-list"></ul>
-  </div>
-  <script src="script.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Todo App</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Todo App</h1>
+      <form id="todo-form" method="POST">
+        <input type="text" id="todo-input" placeholder="Add a new todo" />
+        <button id="add-button" type="submit">Add Todo</button>
+      </form>
+      <ul id="todo-list"></ul>
+      <p id="error-message"></p>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
