--- a/hinemosu1415/client/index.html
+++ b/hinemosu1415/client/index.html
@@ -10,6 +10,7 @@
 
   <form id="todo-form">
     <input type="text" id="todo-input" placeholder="新しいTODOを入力">
+    <input type="checkbox" id="todo-comp">
     <button type="submit">追加</button>
   </form>
 
