--- a/hinemosu1415/client/index.html
+++ b/hinemosu1415/client/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TODO一覧</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
   <ul id="todo-list"></ul>
   <form id="todo-form">
     <input type="text" id="todo-input" placeholder="やることを入力">
-    <label>
+    <label for="todo-comp">
       <input type="checkbox" id="todo-comp">
     </label>
     <button type="submit">追加</button>
